--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,6 +181,14 @@ h5.subtitle {
   margin: 10px auto;
 }
 
+.course {
+  text-decoration: underline;
+}
+
+.course:hover {
+  text-decoration: underline;
+}
+
 /*---------- BUTTONS ----------*/
 .btn {
   font: 600 10.5px/1;
@@ -301,6 +309,10 @@ h5.subtitle {
   background-color: #0db8ca;
 }
 
+.bg-primary2 {
+  background-color: #8b0000;
+}
+
 .bg-gray {
   background-color: #f2f4ec;
 }
@@ -351,6 +363,10 @@ h5.subtitle {
 .heading h3 {
   margin-bottom: 10px;
   font-weight: 600;
+}
+
+p, li {
+  color: #000;
 }
 
 .b-logo {
@@ -863,6 +879,11 @@ HISTORY MISSION
 ----------------------*/
 .page-banner-area.page-service {
   background: url("../images/bg/bg-2.jpg") no-repeat;
+  background-size: cover;
+}
+
+.page-banner-area2.page-service {
+  background: #8b0000;
   background-size: cover;
 }
 
