--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ h5,
 .h5,
 h6,
 .h6 {
-  font-family: "Poppins", sans-serif;
+  font-family: verdana, "Times New Roman";
   font-weight: 600;
   margin-bottom: 0px;
   color: #232323;
@@ -367,6 +367,17 @@ h5.subtitle {
 
 p, li {
   color: #000;
+}
+
+.a_underline {
+  text-decoration: underline;
+}
+
+:target::before {
+  content: "";
+  display: block;
+  height: 200px; /* fixed header height*/
+  margin: -60px 0 0; /* negative fixed header height */
 }
 
 .b-logo {
@@ -1475,7 +1486,7 @@ BLOG SINGLE
     width: 1rem;
   }
   .trans-navigation {
-    background: #232323;
+    background: #8b0000;
   }
   .navbar-expand-lg.trans-navigation .navbar-nav .nav-link {
     margin-bottom: 10px;
@@ -1556,7 +1567,7 @@ BLOG SINGLE
     width: 1rem;
   }
   .trans-navigation {
-    background: #232323;
+    background: #8b0000;
   }
   .navbar-expand-lg.trans-navigation .navbar-nav .nav-link {
     margin-bottom: 10px;
@@ -1652,7 +1663,7 @@ BLOG SINGLE
     width: 1rem;
   }
   .trans-navigation {
-    background: #232323;
+    background: #8b0000;
     padding: 20px 15px;
   }
   .navbar-expand-lg.trans-navigation .navbar-nav .nav-link {
