--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,6 +353,10 @@ h5.subtitle {
   opacity: 0.87;
 }
 
+.bg-yellow {
+  background-color: #e19825;
+}
+
 /* ========================
 
 ==============================*/
