--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -377,13 +377,14 @@ p, li {
   text-decoration: underline;
 }
 
+/*
 :target::before {
   content: "";
   display: block;
-  height: 200px; /* fixed header height*/
-  margin: -60px 0 0; /* negative fixed header height */
+  height: 200px; 
+  margin: -60px 0 0; 
 }
-
+*/
 .b-logo {
   max-width: 200px !important;
 }
